--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,8 +24,6 @@ html[color-theme="dark"] body {
 }
 html[color-theme="light"] body {
   background-color: #fff;
-
-  
 }
 
 html[color-theme="light"] .scrolled {
@@ -36,13 +34,27 @@ html[color-theme="light"] .scrolled {
   z-index: 999;
 }
 
-html[color-theme="dark"]  .scrolled {
-  position: sticky;
-  top: 0;
+html[color-theme="dark"] .scrolled {
   box-shadow: 0px 1px 3px rgba(97, 108, 131, 0.1),
     0px 1px 2px rgba(244, 244, 247, 0.06);
-  z-index: 999;
 }
+html[color-theme="system"] .scrolled {
+  box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1),
+    0px 1px 2px rgba(16, 24, 40, 0.06);
+}
+.scrolled {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1),
+    0px 1px 2px rgba(16, 24, 40, 0.06);
+}
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
 .nav__menu {
   list-style: none;
 }
@@ -248,12 +260,53 @@ html[color-theme="dark"]  .scrolled {
 }
 
 html[color-theme="dark"] #header__moon {
-  color: #27AE60;
+  color: #27ae60;
 }
 html[color-theme="light"] #header__sun {
-
-  color: #27AE60;
+  color: #27ae60;
 }
 html[color-theme="system"] #header__indeterminate {
-  color: #27AE60;
+  color: #27ae60;
+}
+
+.banner__image {
+  background-image: url("/images/startup.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.board__carousel .slider {
+  width: 30% !important;
+}
+@media screen and (max-width: 1024px) {
+  .board__carousel .slider {
+    width: 42% !important;
+  }
+}
+@media screen and (max-width: 565px) {
+  .board__carousel .slider {
+    width: 80% !important;
+  }
+}
+.banner__carousel .carousel .slider-wrapper {
+  height: 210px !important;
+}
+@media screen and (max-width: 565px) {
+  .banner__carousel .carousel .slider-wrapper {
+    height: 170px !important;
+  }
+}
+.carousel .slide .py-3 .slide__item {
+  width: 95%;
+  margin: 0 auto;
+  transition: all 0.5s;
+  opacity: 0.6;
+}
+.carousel .slide.selected .py-3 .slide__item {
+  opacity: 1;
+  width: 100%;
+}
+.carousel .slide img {
+  width: auto !important;
+  vertical-align: top;
+  border: 0;
 }
