--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -60,6 +60,9 @@ html[color-theme="system"] .scrolled {
   box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1),
     0px 1px 2px rgba(16, 24, 40, 0.06);
 }
+html, body{
+  scroll-behavior: smooth;
+}
 .scrolled {
   position: sticky;
   top: 0;
